--- a/TABit/TABit.csproj
+++ b/TABit/TABit.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bar.cs" />
+    <Compile Include="KeyDetection.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
