--- a/TABit/TABit.csproj
+++ b/TABit/TABit.csproj
@@ -76,6 +76,7 @@
     <EmbeddedResource Include="Tuning.resx">
       <DependentUpon>Tuning.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
