--- a/TABit/TABit.csproj
+++ b/TABit/TABit.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Settings.Designer.cs">
       <DependentUpon>Settings.cs</DependentUpon>
     </Compile>
+    <Compile Include="Sheet.cs" />
     <Compile Include="Tuning.cs">
       <SubType>Form</SubType>
     </Compile>
