--- a/TABit/App.config
+++ b/TABit/App.config
@@ -1,6 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TABit.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TABit.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <TABit.Properties.Settings>
+            <setting name="SCharsUser" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SLinesUser" serializeAs="String">
+                <value />
+            </setting>
+        </TABit.Properties.Settings>
+    </userSettings>
+    <applicationSettings>
+        <TABit.Properties.Settings>
+            <setting name="SCharsDefault" serializeAs="String">
+                <value>80</value>
+            </setting>
+            <setting name="SLinesDefault" serializeAs="String">
+                <value>3</value>
+            </setting>
+        </TABit.Properties.Settings>
+    </applicationSettings>
 </configuration>
