--- a/TABit/TABit.csproj
+++ b/TABit/TABit.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bar.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="KeyAction.cs" />
     <Compile Include="KeyActionsToDo\ChooseBarAction.cs" />
     <Compile Include="KeyActionsToDo\ChooseLineAction.cs" />
